--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
           в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест 
           в России.</p>
-        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по 
+        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по 
           скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
           к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на 
           фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -144,7 +144,7 @@
     <section class="cover">
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <div class="cover__text">
-        <h2 class="cover__title">До Байкала &#171на собаках&#187</h2>
+        <h2 class="cover__title">До Байкала &#171;на собаках&#187;</h2>
         <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала 
         на электричках.</h3>
         </div>
